1. 가입한 동아리, 가입 가능한 동아리 찾는 로직 서비스 이동 2. 가입하지 않은 동아리 찾는 쿼리 수정

--- a/src/main/resources/templates/club/detail.html
+++ b/src/main/resources/templates/club/detail.html
@@ -40,7 +40,8 @@
             <span th:text="${member.student.id}"></span>
         </td>
         <td>
-            <span th:text="${member.student.name}"></span>
+            <a th:href="@{/schools/{schoolId}/students/{studentId}/clubs(schoolId=${schoolId}, studentId=${member.student.id})}"
+               th:text="${member.student.name}"></a>
         </td>
         <td>
             <span th:text="${member.joinedAt}"></span>
